--- a/ruoyi-gateway/src/main/resources/bootstrap.yml
+++ b/ruoyi-gateway/src/main/resources/bootstrap.yml
@@ -27,8 +27,10 @@ spring:
         file-extension: yml
         # 共享配置
         shared-configs:
-          - application.${spring.cloud.nacos.config.file-extension}
-          - application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+          - data-id: application.${spring.cloud.nacos.config.file-extension}
+            refresh: true
+          - data-id: application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+            refresh: true
 
 --- # sentinel 配置
 spring:
