--- a/ruoyi-modules/ruoyi-file/src/main/resources/bootstrap.yml
+++ b/ruoyi-modules/ruoyi-file/src/main/resources/bootstrap.yml
@@ -11,6 +11,12 @@ spring:
     # 环境配置
     active: @profiles.active@
 
+--- # dubbo 订阅配置
+dubbo:
+  cloud:
+    # 需要远程调用的服务 多个用逗号分割
+    subscribed-services: ruoyi-system
+
 --- # nacos 配置
 spring:
   cloud:
