--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ruoyi</groupId>
-    <artifactId>ruoyi</artifactId>
+    <artifactId>ruoyi-cloud-plus</artifactId>
     <version>0.2.0</version>
 
-    <name>ruoyi</name>
-    <url>http://www.ruoyi.vip</url>
-    <description>若依微服务系统</description>
+    <name>RuoYi-Cloud-Plus</name>
+    <url>https://gitee.com/JavaLionLi/RuoYi-Cloud-Plus</url>
+    <description>RuoYi-Cloud-Plus微服务系统</description>
 
     <properties>
         <ruoyi.version>0.2.0</ruoyi.version>
