--- a/ruoyi-auth/pom.xml
+++ b/ruoyi-auth/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.ruoyi</groupId>
-        <artifactId>ruoyi</artifactId>
+        <artifactId>ruoyi-cloud-plus</artifactId>
         <version>0.2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
