--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,8 @@
         <hutool.version>5.7.16</hutool.version>
         <redisson.version>3.16.7</redisson.version>
         <lock4j.version>2.2.1</lock4j.version>
-        <dubbo.version>3.0.4</dubbo.version>
+        <dubbo.version>2.7.15</dubbo.version>
+        <spring.context.support.version>1.0.11</spring.context.support.version>
     </properties>
 
     <profiles>
@@ -99,6 +100,25 @@
                 <groupId>com.alibaba.nacos</groupId>
                 <artifactId>nacos-client</artifactId>
                 <version>${alibaba.nacos.version}</version>
+            </dependency>
+
+            <!-- Apache Dubbo 配置 -->
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-spring-boot-starter</artifactId>
+                <version>${dubbo.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo</artifactId>
+                <version>${dubbo.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.spring</groupId>
+                <artifactId>spring-context-support</artifactId>
+                <version>${spring.context.support.version}</version>
             </dependency>
 
             <!-- SpringBoot 依赖配置 -->
