--- a/ruoyi-api/pom.xml
+++ b/ruoyi-api/pom.xml
@@ -9,6 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <modules>
+        <module>ruoyi-api-bom</module>
         <module>ruoyi-api-system</module>
         <module>ruoyi-api-file</module>
     </modules>
