--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -9,6 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <modules>
+        <module>ruoyi-common-bom</module>
         <module>ruoyi-common-log</module>
         <module>ruoyi-common-core</module>
         <module>ruoyi-common-redis</module>
