--- a/ruoyi-visual/ruoyi-monitor/src/main/resources/bootstrap.yml
+++ b/ruoyi-visual/ruoyi-monitor/src/main/resources/bootstrap.yml
@@ -20,25 +20,14 @@ spring:
       discovery:
         # 注册组
         group: @nacos.discovery.group@
+        namespace: ${spring.profiles.active}
       config:
         # 配置组
         group: @nacos.config.group@
+        namespace: ${spring.profiles.active}
         # 配置文件格式
         file-extension: yml
         # 共享配置
         shared-configs:
           - data-id: application.${spring.cloud.nacos.config.file-extension}
             refresh: true
-          - data-id: application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
-            refresh: true
-
---- # 监控中心配置
-spring:
-  security:
-    user:
-      name: ${monitor.user.name}
-      password: ${monitor.user.password}
-  boot:
-    admin:
-      ui:
-        title: ${monitor.ui.title}
