--- a/config/dev/application.yml
+++ b/config/dev/application.yml
@@ -26,6 +26,8 @@ dubbo:
   registry:
     address: nacos://${spring.cloud.nacos.server-addr}
     group: DUBBO_GROUP
+    # URL采用精简模式(与元数据中心配合)
+    simplified: true
   # 消费者相关配置
   consumer:
     # 结果缓存(LRU算法)
@@ -53,107 +55,63 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     serialization:
       # 格式化输出
-      indent_output: false
+      INDENT_OUTPUT: false
       # 忽略无法转换的对象
       fail_on_empty_beans: false
     deserialization:
       # 允许对象忽略json中不存在的属性
       fail_on_unknown_properties: false
   cloud:
-    # 网关配置
-    gateway:
-      discovery:
-        locator:
-          lowerCaseServiceId: true
-          enabled: true
-      routes:
-        # 认证中心
-        - id: ruoyi-auth
-          uri: lb://ruoyi-auth
-          predicates:
-            - Path=/auth/**
-          filters:
-            # 验证码处理
-            - CacheRequestFilter
-            - ValidateCodeFilter
-            - StripPrefix=1
-        # 代码生成
-        - id: ruoyi-gen
-          uri: lb://ruoyi-gen
-          predicates:
-            - Path=/code/**
-          filters:
-            - StripPrefix=1
-        # 定时任务
-        - id: ruoyi-job
-          uri: lb://ruoyi-job
-          predicates:
-            - Path=/schedule/**
-          filters:
-            - StripPrefix=1
-        # 系统模块
-        - id: ruoyi-system
-          uri: lb://ruoyi-system
-          predicates:
-            - Path=/system/**
-          filters:
-            - StripPrefix=1
-        # 文件服务
-        - id: ruoyi-file
-          uri: lb://ruoyi-file
-          predicates:
-            - Path=/file/**
-          filters:
-            - StripPrefix=1
+    # sentinel 配置
+    sentinel:
+      # 取消控制台懒加载
+      eager: true
+      transport:
+        # 控制台地址
+        dashboard: localhost:8718
 
-# 安全配置
-security:
-  # 验证码
-  captcha:
-    # 是否开启验证码
-    enabled: true
-    # 验证码类型 math 数组计算 char 字符验证
-    type: MATH
-    # line 线段干扰 circle 圆圈干扰 shear 扭曲干扰
-    category: CIRCLE
-    # 数字验证码位数
-    numberLength: 1
-    # 字符验证码长度
-    charLength: 4
-  # 防止XSS攻击
-  xss:
-    enabled: true
-    excludeUrls:
-      - /system/notice
-  # 不校验白名单
-  ignore:
-    whites:
-      - /auth/logout
-      - /auth/login
-      - /auth/register
-      - /*/v2/api-docs
-      - /csrf
+  # redis通用配置 子服务可以自行配置进行覆盖
+  redis:
+    host: localhost
+    port: 6379
+    password:
+    database: 0
+    timeout: 10s
+    ssl: false
 
-# 暴露监控端点
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
-  endpoint:
-    logfile:
-      external-file: ./logs/${spring.application.name}/console.log
-
-# 日志配置
-logging:
-  level:
-    org.springframework: warn
-    org.apache.dubbo: warn
-    com.alibaba.nacos: warn
-  config: classpath:logback.xml
-
-# redisson 缓存配置
+# redisson 配置
 redisson:
+  # 线程池数量
+  threads: 16
+  # Netty线程池数量
+  nettyThreads: 32
+  # 传输模式
+  transportMode: "NIO"
+  # 单节点配置
+  singleServerConfig:
+    # 客户端名称
+    clientName: ${ruoyi.name}
+    # 最小空闲连接数
+    connectionMinimumIdleSize: 32
+    # 连接池大小
+    connectionPoolSize: 64
+    # 连接空闲超时，单位：毫秒
+    idleConnectionTimeout: 10000
+    # 命令等待超时，单位：毫秒
+    timeout: 3000
+    # 如果尝试在此限制之内发送成功，则开始启用 timeout 计时。
+    retryAttempts: 3
+    # 命令重试发送时间间隔，单位：毫秒
+    retryInterval: 1500
+    # 发布和订阅连接的最小空闲连接数
+    subscriptionConnectionMinimumIdleSize: 1
+    # 发布和订阅连接池大小
+    subscriptionConnectionPoolSize: 50
+    # 单个连接最大订阅数量
+    subscriptionsPerConnection: 5
+    # DNS监测时间间隔，单位：毫秒
+    dnsMonitoringInterval: 5000
+  # redisson 缓存配置
   cacheGroup:
     # 用例: @Cacheable(cacheNames="groupId", key="#XXX") 方可使用缓存组配置
     - groupId: redissonCacheMap
@@ -171,6 +129,26 @@ lock4j:
   # 分布式锁的超时时间，默认为 30 毫秒
   expire: 30000
 
+# 暴露监控端点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: ALWAYS
+    logfile:
+      external-file: ./logs/${spring.application.name}/console.log
+
+# 日志配置
+logging:
+  level:
+    org.springframework: warn
+    org.apache.dubbo: warn
+    com.alibaba.nacos: warn
+  config: classpath:logback.xml
+
 # mybatis配置
 mybatis:
   # 搜索指定包别名
@@ -182,3 +160,29 @@ mybatis:
 swagger:
   license: Powered By ruoyi
   licenseUrl: https://ruoyi.vip
+
+# seata配置
+seata:
+  # 默认关闭，如需启用spring.datasource.dynami.seata需要同时开启
+  enabled: false
+  # Seata 应用编号，默认为 ${spring.application.name}
+  application-id: ${spring.application.name}
+  # Seata 事务组编号，用于 TC 集群名
+  tx-service-group: ${spring.application.name}-group
+  # 服务配置项
+  service:
+    # 虚拟组和分组的映射
+    vgroup-mapping:
+      ${spring.application.name}: default
+  config:
+    type: nacos
+    nacos:
+      serverAddr: ${spring.cloud.nacos.server-addr}
+      group: SEATA_GROUP
+      namespace:
+  registry:
+    type: nacos
+    nacos:
+      application: seata-server
+      server-addr: ${spring.cloud.nacos.server-addr}
+      namespace:
