--- a/ruoyi-modules/ruoyi-system/src/main/resources/bootstrap.yml
+++ b/ruoyi-modules/ruoyi-system/src/main/resources/bootstrap.yml
@@ -11,18 +11,6 @@ spring:
     # 环境配置
     active: @profiles.active@
 
-# swagger配置
-swagger:
-  title: 系统模块接口文档
-  license: ${swagger.license}
-  licenseUrl: ${swagger.licenseUrl}
-
---- # dubbo 订阅配置
-dubbo:
-  cloud:
-    # 需要远程调用的服务 多个用逗号分割
-    subscribed-services: ruoyi-file
-
 --- # nacos 配置
 spring:
   cloud:
@@ -32,32 +20,16 @@ spring:
       discovery:
         # 注册组
         group: @nacos.discovery.group@
+        namespace: ${spring.profiles.active}
       config:
         # 配置组
         group: @nacos.config.group@
+        namespace: ${spring.profiles.active}
         # 配置文件格式
         file-extension: yml
         # 共享配置
         shared-configs:
           - data-id: application.${spring.cloud.nacos.config.file-extension}
             refresh: true
-          - data-id: application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+          - data-id: datasource.${spring.cloud.nacos.config.file-extension}
             refresh: true
-
---- # 数据源
-spring:
-  datasource:
-    dynamic:
-      datasource:
-        # 主库数据源
-        master:
-          driver-class-name: ${spring.datasource.system-master.driver-class-name}
-          url: ${spring.datasource.system-master.url}
-          username: ${spring.datasource.system-master.username}
-          password: ${spring.datasource.system-master.password}
-        # 从库数据源
-#        slave:
-#          username:
-#          password:
-#          url:
-#          driver-class-name:
