--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>ruoyi-common-bom</module>
         <module>ruoyi-common-log</module>
+        <module>ruoyi-common-dict</module>
         <module>ruoyi-common-core</module>
         <module>ruoyi-common-redis</module>
         <module>ruoyi-common-swagger</module>
