--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -17,17 +17,18 @@
         <module>ruoyi-common-swagger</module>
         <module>ruoyi-common-security</module>
         <module>ruoyi-common-datascope</module>
-		<module>ruoyi-common-datasource</module>
+        <module>ruoyi-common-datasource</module>
         <module>ruoyi-common-web</module>
         <module>ruoyi-common-job</module>
         <module>ruoyi-common-dubbo</module>
+        <module>ruoyi-common-loadbalancer</module>
     </modules>
 
     <artifactId>ruoyi-common</artifactId>
     <packaging>pom</packaging>
 
     <description>
-	    ruoyi-common通用模块
+        ruoyi-common通用模块
     </description>
 
 </project>
