fix 修复 dubbo 自动配置优先级高于 nacos 导致配置不生效 循环依赖报错

--- a/ruoyi-gateway/src/main/resources/bootstrap.yml
+++ b/ruoyi-gateway/src/main/resources/bootstrap.yml
@@ -4,6 +4,9 @@ server:
 
 # Spring
 spring:
+  main:
+    # 此配置禁止放入 nacos 优先级不够
+    allow-circular-references: true
   application:
     # 应用名称
     name: ruoyi-gateway
