--- a/ruoyi-auth/src/main/resources/bootstrap.yml
+++ b/ruoyi-auth/src/main/resources/bootstrap.yml
@@ -1,9 +1,12 @@
 # Tomcat
-server: 
+server:
   port: 9200
 
 # Spring
-spring: 
+spring:
+  main:
+    # 此配置禁止放入 nacos 优先级不够
+    allow-circular-references: true
   application:
     # 应用名称
     name: ruoyi-auth
