--- a/ruoyi-visual/ruoyi-monitor/src/main/resources/bootstrap.yml
+++ b/ruoyi-visual/ruoyi-monitor/src/main/resources/bootstrap.yml
@@ -3,7 +3,10 @@ server:
   port: 9100
 
 # Spring
-spring: 
+spring:
+  main:
+    # 此配置禁止放入 nacos 优先级不够
+    allow-circular-references: true
   application:
     # 应用名称
     name: ruoyi-monitor
