update dubbo 请求日志增加日志等级

--- a/config/dev/application.yml
+++ b/config/dev/application.yml
@@ -45,6 +45,8 @@ dubbo:
   custom:
     # 全局请求log
     request-log: true
+    # info 基础信息 param 参数信息 full 全部
+    log-level: info
 
 spring:
   main:
