--- a/ruoyi-auth/pom.xml
+++ b/ruoyi-auth/pom.xml
@@ -56,6 +56,11 @@
             <artifactId>ruoyi-common-dubbo</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-common-seata</artifactId>
+        </dependency>
+
         <!-- 自定义负载均衡(多团队开发使用) -->
 <!--        <dependency>-->
 <!--            <groupId>com.ruoyi</groupId>-->
