--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -21,6 +21,7 @@
         <module>ruoyi-common-web</module>
         <module>ruoyi-common-job</module>
         <module>ruoyi-common-dubbo</module>
+        <module>ruoyi-common-seata</module>
         <module>ruoyi-common-loadbalancer</module>
     </modules>
 
