fix 修复 升级带来的兼容性问题

--- a/config/dev/application.yml
+++ b/config/dev/application.yml
@@ -185,7 +185,7 @@ knife4j:
   # 是否开启Knife4j增强模式
   enable: true
   # 是否开启生产环境保护策略
-  production: true
+  production: false
   # 登录认证
   basic:
     enable: true
