--- a/config/dev/ruoyi-gen.yml
+++ b/config/dev/ruoyi-gen.yml
@@ -17,12 +17,12 @@ spring:
           username: ${datasource.system-master.username}
           password: ${datasource.system-master.password}
         # 从库数据源
-        slave:
-          lazy: true
-          driver-class-name:
-          url:
-          username:
-          password:
+        #slave:
+        #  lazy: true
+        #  driver-class-name:
+        #  url:
+        #  username:
+        #  password:
 
 # 代码生成
 gen:
