--- a/config/dev/seata-server.properties
+++ b/config/dev/seata-server.properties
@@ -1,6 +1,7 @@
 service.vgroupMapping.ruoyi-auth-group=default
 service.vgroupMapping.ruoyi-system-group=default
 service.vgroupMapping.ruoyi-file-group=default
+service.vgroupMapping.ruoyi-gen-group=default
 service.enableDegrade=false
 service.disableGlobalTransaction=false
 store.mode=db
