--- a/ruoyi-common/ruoyi-common-bom/pom.xml
+++ b/ruoyi-common/ruoyi-common-bom/pom.xml
@@ -36,6 +36,12 @@
                 <version>${project.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.ruoyi</groupId>
+                <artifactId>ruoyi-common-satoken</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
             <!-- 多数据源 -->
             <dependency>
                 <groupId>com.ruoyi</groupId>
