--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -17,6 +17,7 @@
         <module>ruoyi-common-redis</module>
         <module>ruoyi-common-swagger</module>
         <module>ruoyi-common-security</module>
+        <module>ruoyi-common-satoken</module>
         <module>ruoyi-common-datasource</module>
         <module>ruoyi-common-web</module>
         <module>ruoyi-common-mybatis</module>
