update seata不具备健康检查能力 为防止报错 排除掉

--- a/config/dev/ruoyi-monitor.yml
+++ b/config/dev/ruoyi-monitor.yml
@@ -8,3 +8,6 @@ spring:
     admin:
       ui:
         title: RuoYi-Cloud-Plus服务监控中心
+      discovery:
+        # seata 不具有健康检查的能力 防止报错排除掉
+        ignored-services: seata-server
